--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ dioxus = { version = "0.6.3", features = ["desktop"] }
 quick-xml = { version = "0.38.2", features = ["serialize"] }
 dirs = "6.0"
 log = "0.4.27"
+rfd = "0.15.4"
+zip = "4.3.0"
 
 [features]
 default = ["desktop"]
