--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.27"
 rfd = "0.15.4"
 zip = "4.3.0"
 libc = "0.2"
+tokio = { version = "1.0", features = ["time"] }
 
 [features]
 default = ["desktop"]
