--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ dirs = "6.0"
 log = "0.4.27"
 rfd = "0.15.4"
 zip = "4.3.0"
-libc = "0.2"
-tokio = { version = "1.0", features = ["time"] }
+libc = "0.2.175"
+tokio = { version = "1.47.1", features = ["time"] }
+tokio-util = "0.7.16"
 
 [features]
 default = ["desktop"]
